Crash on baking vertex colors (color attributes) #100099

Closed
opened 2022-07-31 19:50:38 +02:00 by Luke Payne · 5 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12

Blender Version
Broken: version: 3.2.1, branch: master, commit date: 2022-07-05 15:44, hash: a2d59b2dac
Note: Also tested in 3.3 beta & 3.4 alpha, same behavior, logs attached.

Short description of error
Trying to bake vertex colors to an image so the model could be exported to a game engine. When clicking "Bake," it appears to start, the % meter gets to 12/14 % or so, then Blender crashes.

Exact steps for others to reproduce the error
In attached .blend file:

  • Set CUDA device in preferences to graphics card, using GPU Compute (however crash still seems to occur w/o these steps, on CPU as well).
  • Created a blank x1024 image texture to bake to in the material of the eye, standard unwrap w/ current seams.
  • Ensured image was selected as per usual when baking.
  • Selected "Color Attributes" under bake output.
  • Click "Bake"

Process appears to begin, but then Blender crashes.

.blend file:
Nu_Low_Poly_1.blend

Crash trace files:
Nu_Low_Poly_1.crash_3.21.txt
Nu_Low_Poly_1.crash_3.3.txt
Nu_Low_Poly_1.crash_3.4alpha.txt

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12 **Blender Version** Broken: version: 3.2.1, branch: master, commit date: 2022-07-05 15:44, hash: `a2d59b2dac` Note: Also tested in 3.3 beta & 3.4 alpha, same behavior, logs attached. **Short description of error** Trying to bake vertex colors to an image so the model could be exported to a game engine. When clicking "Bake," it appears to start, the % meter gets to 12/14 % or so, then Blender crashes. **Exact steps for others to reproduce the error** In attached .blend file: * Set CUDA device in preferences to graphics card, using GPU Compute (however crash still seems to occur w/o these steps, on CPU as well). * Created a blank x1024 image texture to bake to in the material of the eye, standard unwrap w/ current seams. * Ensured image was selected as per usual when baking. * Selected "Color Attributes" under bake output. * Click "Bake" Process appears to begin, but then Blender crashes. .blend file: [Nu_Low_Poly_1.blend](https://archive.blender.org/developer/F13327800/Nu_Low_Poly_1.blend) Crash trace files: [Nu_Low_Poly_1.crash_3.21.txt](https://archive.blender.org/developer/F13327801/Nu_Low_Poly_1.crash_3.21.txt) [Nu_Low_Poly_1.crash_3.3.txt](https://archive.blender.org/developer/F13327802/Nu_Low_Poly_1.crash_3.3.txt) [Nu_Low_Poly_1.crash_3.4alpha.txt](https://archive.blender.org/developer/F13327803/Nu_Low_Poly_1.crash_3.4alpha.txt)
Author

Added subscriber: @holonet

Added subscriber: @holonet
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

This issue was referenced by 9ea9fc1f34

This issue was referenced by 9ea9fc1f34a90a1db92199293b813319f78795d3

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2022-08-04 20:20:45 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#100099
No description provided.