Fix T100099: Cycles crash baking vertex colors in edit mode

This was not supported, added now.